<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#88000000" >

        <ImageView
            android:id="@+id/appBanner"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_margin="20dp"
            android:contentDescription="@string/app_name"
            android:paddingTop="30dp"
            android:src="@android:drawable/btn_star" >
        </ImageView>

        <TextView
            android:id="@+id/appVersion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/appBanner"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/appVersion"
            android:textColor="#ffffff"
            android:textSize="20sp" >
        </TextView>

        <LinearLayout
            android:id="@+id/aboutUs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/appbrain_banner"
            android:layout_centerHorizontal="true"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/text_copyRight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/copyRight"
                android:textColor="#ffffff"
                android:textSize="20sp" >
            </TextView>

            <TextView
                android:id="@+id/text_siteAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:gravity="center_horizontal"
                android:text="@string/siteAddress"
                android:textColor="#ffffff" >
            </TextView>
        </LinearLayout>

        <com.appbrain.AppBrainBanner
            android:id="@+id/appbrain_banner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true" />
    </RelativeLayout>

</RelativeLayout>